--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -8,6 +8,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename = 'css/index/main.css') }}">
+<meta name="google-site-verification" content="23c9wXfWMFASIr5bxuXrMxtSJ-g-bLTfpi94gMPPZVA" />
 {% endblock %}
 
 
