--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
 						<a class="nav__link" href="/login">Войти</a>
 						{% else %}
 						<a class="nav__link" href="/dashboard">Панель</a>
+						<a class="nav__link" href="/logout">Выйти</a>
 						{% endif %}
 					</nav>
 				</div>
