--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 					<nav class="nav__right">
 						<a class="nav__link" href="/commands">Команды</a>
 						<a class="nav__link" href="/support">Поддержка</a>
+						<a class="nav__link" href="https://docs.borry.ru">Документация</a>
 						{% if not authorized %}
 						<a class="nav__link" href="/login">Войти</a>
 						{% else %}
